syntax = "proto3";
option java_multiple_files = true;
option java_outer_classname = "GrpcAppProto";
option objc_class_prefix = "GAP";

service GrpcService {

  rpc distanceTwoPointsProcedure (DistanceTwoPointsRequest) returns (DistanceTwoPointsResponse) {}
  rpc distanceThreePointsProcedure (DistanceThreePointsRequest) returns (DistanceThreePointsResponse) {}
}

message DistanceTwoPointsRequest {
  double lat1 = 1;
  double lon1 = 2;
  double lat2 = 3;
  double lon2 = 4;
}

message DistanceTwoPointsResponse{
  double message = 1;
}

message DistanceThreePointsRequest {
  double lat1 = 1;
  double lon1 = 2;
  double lat2 = 3;
  double lon2 = 4;
  double lat3 = 5;
  double lon3 = 6;
}

message DistanceThreePointsResponse{
  double message = 1;
}